# dynamo

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  pyproject.toml
.devcontainer/: README.md
.github/: filters.yaml
.github/scripts/: route_buildkit.sh
.github/workflows/: build-frontend-image.yaml  build-test-distribute-flavor-matrix.yml  build-test-distribute-flavor.yml  fern-docs.yml  pr.yaml  pre-merge.yml
bench/: run.sh
bench/plot/: __init__.py  charts.py  main.py  parse_logs.py  parse_metrics.py
bench/scripts/: client.sh  server.sh
bench_results/run_20260212_163433/: config.json
bench_results/run_20260213_073744/: config.json
bench_results/run_20260213_103936/: config.json
benchmarks/prefix_data_generator/: README.md  synthesizer.py
benchmarks/router/: run_engines.sh
container/: README.md  context.yaml  render.py
container/templates/: args.Dockerfile  sglang_runtime.Dockerfile  vllm_runtime.Dockerfile
deploy/chrek/: Dockerfile  Makefile  go.mod  go.sum
deploy/inference-gateway/: README.md
deploy/operator/: go.mod  go.sum
docs/: docs.yml
docs/agents/: tool-calling.md
docs/benchmarks/: benchmarking.md
docs/design_docs/: architecture.md  distributed_runtime.md  dynamo_flow.md  kvbm_design.md  router_design.md
docs/integrations/: flexkv_integration.md
docs/kubernetes/: api_reference.md
docs/observability/: metrics.md
docs/reference/: cli.md  feature-matrix.md  release-artifacts.md  support-matrix.md
lib/bench/: Cargo.toml
recipes/: CONTRIBUTING.md  README.md
scripts/: report_pytest_markers.py
tests/: conftest.py
(+501 files in other folders)
