# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Lightweight HTTP benchmarks for Dynamo endpoints"

[[bin]]
name = "multiturn_bench"
path = "src/bin/multiturn_bench.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.18"
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
